# RBDOOM-3-BFG-Raytrace

./: .gitmodules
docs/: doom3_light_reference_for_codex_agent.txt  (+22 more)
neo/shaders/: CMakeLists.txt  shaders.cfg
neo/shaders/builtin/pathtracing/: PathTracePrimarySurface.hlsli  pathtrace_emissive_sampling.hlsli  pathtrace_material_classifier.hlsli  pathtrace_nee.hlsli  pathtrace_nee_cache_debug.rt.hlsl  pathtrace_pdf_nee_verifier.rt.hlsl  pathtrace_primary_surface_producer.rt.hlsl  pathtrace_regir_debug.rt.hlsl  pathtrace_restir_combined_resolve.rt.hlsl  pathtrace_restir_combined_resolve_reservoir_pages.hlsli  pathtrace_restir_di_initial_debug.hlsli  pathtrace_restir_direct_spatial_reservoir_producer.rt.hlsl  pathtrace_restir_direct_temporal_producer.rt.hlsl  pathtrace_restir_indirect_initial_producer.rt.hlsl  pathtrace_restir_local_debug_reservoirs.hlsli  pathtrace_restir_local_preview_resolve.hlsli  pathtrace_restir_pdf_nee_rlu_current.rt.hlsl  pathtrace_restir_reference_final_shading_debug.hlsli  pathtrace_restir_reference_rab_contract_debug.hlsli  pathtrace_restir_reference_temporal_debug.hlsli  pathtrace_restir_reflection_producer.rt.hlsl  pathtrace_restir_rr_guide_debug.hlsli  pathtrace_skinning.cs.hlsl  pathtrace_smoke.rt.hlsl  pathtrace_smoke_mode18_restir_hybrid.rt.hlsl  pathtrace_smoke_native_nee_reservoir_preview.hlsli  pathtrace_smoke_rab_environment_stub.hlsli  pathtrace_smoke_rab_material_supplier.hlsli  pathtrace_smoke_rab_motion_supplier.hlsli  pathtrace_smoke_rab_policy_supplier.hlsli  pathtrace_smoke_rab_surface_supplier.hlsli  pathtrace_smoke_rab_visibility_supplier.hlsli  pathtrace_smoke_restir_attribution.rt.hlsl  pathtrace_smoke_restir_combined.rt.hlsl  pathtrace_smoke_restir_initial.rt.hlsl  pathtrace_smoke_restir_spatial.rt.hlsl  pathtrace_smoke_restir_spatial_attribution.rt.hlsl  pathtrace_smoke_restir_spatial_reservoir.rt.hlsl  pathtrace_smoke_restir_temporal.rt.hlsl  pathtrace_smoke_restir_temporal_shading.rt.hlsl
neo/shaders/builtin/pathtracing/Rtxdi/: RtxdiParameters.h
neo/shaders/builtin/pathtracing/Rtxdi/DI/: InitialSampling.hlsli  ReSTIRDIParameters.h  Reservoir.hlsli  ReservoirStorage.hlsli  SpatialResampling.hlsli  TemporalResampling.hlsli
neo/shaders/builtin/pathtracing/Rtxdi/GI/: ReSTIRGIParameters.h  Reservoir.hlsli  SpatialResampling.hlsli  TemporalResampling.hlsli
neo/shaders/builtin/pathtracing/Rtxdi/PT/: InitialSampling.hlsli  PathReconnectibility.hlsli  PathTracerContext.hlsli  PathTracerContextParameters.hlsli  PathTracerRandomContext.hlsli  Reservoir.hlsli  SpatialResampling.hlsli  TemporalResampling.hlsli
neo/shaders/builtin/pathtracing/Rtxdi/Utils/: BrdfRaySample.hlsli  Color.hlsli  Math.hlsli  RandomSamplerState.hlsli  ReservoirAddressing.hlsli  SampledLightData.hlsli
neo/shaders/builtin/pathtracing/RtxdiBridge/: PathTraceRtxdiBridge.hlsli  PathTraceRtxdiBridgeCore.hlsli  RAB_Brdf.hlsli  RAB_DuplicationMap.hlsli  RAB_EnvironmentSamplingStub.hlsli  RAB_HitToLightIndex.hlsli  RAB_LightDomainCounts.hlsli  RAB_LightIdentityRemap.hlsli  RAB_LightInfo.hlsli  RAB_LightInfoCore.hlsli  RAB_LightInfoRuntime.hlsli  RAB_LightLoadRuntime.hlsli  RAB_LightSample.hlsli  RAB_LightSampling.hlsli  RAB_LightSamplingCore.hlsli  RAB_LightTarget.hlsli  RAB_LocalLightPdf.hlsli  RAB_MISCallbacks.hlsli  RAB_Material.hlsli  RAB_NeeCache.hlsli  RAB_RandomSamplerState.hlsli  RAB_RayPayload.hlsli  RAB_ReGIR.hlsli  RAB_Surface.hlsli  RAB_SurfaceCore.hlsli  RAB_UnifiedLightRecord.hlsli  RAB_Visibility.hlsli
neo/shaders/builtin/pathtracing/cleanroom_common/: pathtrace_first_indirect_candidate.hlsli  restir_di_initial_sampling.hlsli  restir_di_parameters.hlsli  restir_di_reservoir.hlsli  restir_di_reservoir_storage.hlsli  restir_di_spatial_resampling.hlsli  restir_di_temporal_resampling.hlsli  restir_gi_adaptive_mcap.hlsli  restir_gi_parameters.hlsli  restir_gi_reservoir.hlsli  restir_gi_reservoir_storage.hlsli  restir_gi_spatial_resampling.hlsli  restir_gi_temporal_resampling.hlsli  restir_pt_algorithm_bridge.hlsli  restir_pt_initial_sampling.hlsli  restir_pt_parameters.hlsli  restir_pt_path_reconnectibility.hlsli  restir_pt_path_tracer_context.hlsli  restir_pt_path_tracer_random_context.hlsli  restir_pt_reservoir.hlsli  restir_pt_spatial_resampling.hlsli  restir_pt_temporal_resampling.hlsli  restir_random_sampler_state.hlsli  restir_shared_brdf_ray_sample.hlsli  restir_shared_color.hlsli  restir_shared_math.hlsli  restir_shared_parameters.hlsli  restir_shared_reservoir_addressing.hlsli  restir_shared_sampled_light_data.hlsli  restir_shared_spatial_neighbors.hlsli
neo/shaders/builtin/pathtracing/cleanroom_rtxdi/: RAB_DoomAnalyticReference.hlsli  pathtrace_clean_rtxdi_di_boiling_filter.cs.hlsl  pathtrace_clean_rtxdi_di_diagnostics.hlsli  pathtrace_clean_rtxdi_di_emissive_distribution.hlsli  pathtrace_clean_rtxdi_di_initial.rt.hlsl  pathtrace_clean_rtxdi_di_material_texture.hlsli  pathtrace_clean_rtxdi_di_nee_cache.hlsli  pathtrace_clean_rtxdi_di_rr_debug.hlsli  pathtrace_clean_rtxdi_di_rr_geometry_guides.hlsli  pathtrace_clean_rtxdi_di_sentinel.rt.hlsl  pathtrace_clean_rtxdi_di_spatial.rt.hlsl  pathtrace_clean_rtxdi_di_temporal.rt.hlsl  pathtrace_clean_rtxdi_di_temporal_output.hlsli  pathtrace_nee_cache_primary_surface_update.cs.hlsl
neo/shaders/builtin/pathtracing/remix_bridge/: RAB_GIInitialSampleBridge.hlsli  RAB_GIReservoirBridge.hlsli  RAB_GITemporalValidationBridge.hlsli  RAB_GradientBridge.hlsli  RAB_LightBridge.hlsli  RAB_LightSamplingBridge.hlsli  RAB_ReservoirBridge.hlsli  RAB_SpatialBridge.hlsli  RAB_SurfaceBridge.hlsli  RAB_TemporalOutputBridge.hlsli
neo/shaders/builtin/pathtracing/remix_restir_gi/: pathtrace_clean_restir_gi.rt.hlsl  pathtrace_clean_restir_gi_boiling_filter.cs.hlsl  pathtrace_clean_restir_gi_producer_rayquery.cs.hlsl  pathtrace_clean_restir_gi_temporal.cs.hlsl  restir_gi_temporal_reuse.rt.hlsl
neo/shaders/builtin/pathtracing/remix_rtxdi/: rtxdi_gradients.rt.hlsl  rtxdi_initial_sampling.rt.hlsl  rtxdi_spatial_reuse.rt.hlsl  rtxdi_temporal_reuse.rt.hlsl
neo/shaders/builtin/post/: tonemapping.ps.hlsl  tonemapping_cb.h
(+385 files in other folders)
